working on examples

--- a/examples/Obtain_dataset.ipynb
+++ b/examples/Obtain_dataset.ipynb
@@ -21,85 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Time</th>\n",
-       "      <th>ProductId</th>\n",
-       "      <th>UserId</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Summary</th>\n",
-       "      <th>Text</th>\n",
-       "      <th>combined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1351123200</td>\n",
-       "      <td>B003XPF9BO</td>\n",
-       "      <td>A3R7JR3FMEBXQB</td>\n",
-       "      <td>5</td>\n",
-       "      <td>where does one  start...and stop... with a tre...</td>\n",
-       "      <td>Wanted to save some to bring to my Chicago fam...</td>\n",
-       "      <td>Title: where does one  start...and stop... wit...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1351123200</td>\n",
-       "      <td>B003JK537S</td>\n",
-       "      <td>A3JBPC3WFUT5ZP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Arrived in pieces</td>\n",
-       "      <td>Not pleased at all. When I opened the box, mos...</td>\n",
-       "      <td>Title: Arrived in pieces; Content: Not pleased...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Time   ProductId          UserId  Score  \\\n",
-       "0  1351123200  B003XPF9BO  A3R7JR3FMEBXQB      5   \n",
-       "1  1351123200  B003JK537S  A3JBPC3WFUT5ZP      1   \n",
-       "\n",
-       "                                             Summary  \\\n",
-       "0  where does one  start...and stop... with a tre...   \n",
-       "1                                  Arrived in pieces   \n",
-       "\n",
-       "                                                Text  \\\n",
-       "0  Wanted to save some to bring to my Chicago fam...   \n",
-       "1  Not pleased at all. When I opened the box, mos...   \n",
-       "\n",
-       "                                            combined  \n",
-       "0  Title: where does one  start...and stop... wit...  \n",
-       "1  Title: Arrived in pieces; Content: Not pleased...  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.7 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
    ],
    "source": [
@@ -169,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openai-cookbook",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
-   "name": "openai-cookbook"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,12 +116,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
